unittest/bin/src/rl/tests/negative/baseline1.js
for(var i = 0; i < 10; ++i)
{
	if(i == 5)
	{
		WScript.Echo("blah");
	}
	else
	{
		WScript.Echo(i);
	}
}